# hexapod_servo_driver

./: .gitignore  CMakeLists.txt  README.md  git_test.txt
python_tests/: Hexapod_object.py  configuration.json  kinematic_movements.py  kinematics.py  main_kinematic.py  python_leg_test.py  python_test.py  test_kinematics.py  uart_communication.py
src/: CommandHandler.hpp  command.hpp  communication.py  config.hpp  hardware.py  includes.hpp  main.c  main.cpp  main.py
src/commands/: CMD_GET_Current.hpp  CMD_GET_Switch_state.hpp  CMD_GET_Voltage.hpp  CMD_SET_Led.hpp  CMD_SET_MULTIPLE_Leds.hpp  CMD_SET_Pulse_To_Multiple_Servo.hpp  CMD_SET_Pulse_To_Servo.hpp
src/utils/: conversion.hpp
